low-code-editor/src/PreLoader/TextPreLoader/styles.scss
.preloader-wrapper-relative {
    position: relative;
    height: 30px;
    width: 110px;
    margin: 0 auto;
}

.preloader-wrapper-absolute {
    position: absolute;
    height: 100vh;
    width: 100vw;
    top: -15px;
    background: #e6e7ec6e;

    div {
        overflow: hidden;
        margin-top: calc(50vh - 15px) !important;
        margin-left: calc(50vw - 55px) !important;
        width: 110px !important;
        height: 30px !important;
    }
}

